# nrf52sdk_using_cmake

./: .gitignore  README.md  build_and_flash.bat
armgcc/: CMakeLists.txt  nrf_common.ld
examples/blink_freertos/: CMakeLists.txt  main.c
examples/blink_freertos/config/: FreeRTOSConfig.h
examples/tinyML_test/: CMakeLists.txt  main.cpp  mpu6050_driver.c  mpu6050_driver.h  syscall_minimal.c
examples/tinyML_test/config/: FreeRTOSConfig.h  sdk_config.h
examples/tinyML_test/model-parameters/: anomaly_metadata.h  model_metadata.h  model_variables.h
examples/tinyML_test/tflite-model/: tflite_learn_783931_7_compiled.cpp  tflite_learn_783931_7_compiled.h
examples/uart/: CMakeLists.txt  freertos_uart_gcc_nrf52.ld  main.c
